--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "craco build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "craco start",
